--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     </div>
 
     <!-- Core Scripts -->
-    <script src="js/supabase.js"></script>
-    <script src="js/app.js"></script>
+    <script src="supabase.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
