--- a/inventory.html
+++ b/inventory.html
@@ -1,133 +1,67 @@
-<!DOCTYPE html>
-<html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>재고 관리 - 크린솔루션 ERP</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-</head>
-<body class="bg-gray-100 font-sans text-gray-800">
+<div class="space-y-6">
+    <!-- 상단 컨트롤 -->
+    <div class="flex justify-between items-center">
+        <!-- 탭 메뉴 -->
+        <div class="flex space-x-1 bg-gray-200 p-1 rounded-lg">
+            <button onclick="Inventory.filterTab('all')" class="tab-btn px-4 py-2 rounded-md text-sm font-medium bg-white text-gray-800 shadow-sm transition-all">전체</button>
+            <button onclick="Inventory.filterTab('복합기')" class="tab-btn px-4 py-2 rounded-md text-sm font-medium text-gray-600 hover:bg-gray-100 transition-all">복합기</button>
+            <button onclick="Inventory.filterTab('소모품')" class="tab-btn px-4 py-2 rounded-md text-sm font-medium text-gray-600 hover:bg-gray-100 transition-all">소모품</button>
+            <button onclick="Inventory.filterTab('부품')" class="tab-btn px-4 py-2 rounded-md text-sm font-medium text-gray-600 hover:bg-gray-100 transition-all">부품</button>
+        </div>
 
-    <div class="flex h-screen overflow-hidden">
-        <!-- 좌측 사이드바 -->
-        <aside class="w-64 bg-slate-900 text-white flex flex-col shadow-xl z-20">
-            <div class="p-6 border-b border-slate-800 flex items-center gap-3">
-                <div class="w-10 h-10 rounded-lg bg-blue-600 flex items-center justify-center text-xl font-bold">C</div>
-                <div>
-                    <h1 class="font-bold text-lg tracking-wide">CleanSolution</h1>
-                    <p class="text-xs text-slate-400">Enterprise System</p>
-                </div>
-            </div>
-            <nav class="flex-1 p-4 space-y-2">
-                <a href="index.html" id="nav-dashboard" class="w-full flex items-center gap-3 px-4 py-3 rounded-lg transition-all text-gray-300 hover:bg-slate-800 hover:text-white text-left">
-                    <i class="fa-solid fa-chart-line w-5 text-center"></i>
-                    <span class="font-medium">대시보드</span>
-                </a>
-                <a href="inventory.html" id="nav-inventory" class="w-full flex items-center gap-3 px-4 py-3 rounded-lg transition-all text-gray-300 hover:bg-slate-800 hover:text-white text-left">
-                    <i class="fa-solid fa-boxes-stacked w-5 text-center"></i>
-                    <span class="font-medium">재고 관리</span>
-                </a>
-                <a href="partners.html" id="nav-partners" class="w-full flex items-center gap-3 px-4 py-3 rounded-lg transition-all text-gray-300 hover:bg-slate-800 hover:text-white text-left">
-                    <i class="fa-solid fa-users w-5 text-center"></i>
-                    <span class="font-medium">거래처 관리</span>
-                </a>
-            </nav>
-            <div class="p-4 border-t border-slate-800">
-                <div class="flex items-center gap-3 px-2">
-                    <div class="w-8 h-8 rounded-full bg-slate-700 flex items-center justify-center text-xs">
-                        <i class="fa-solid fa-user"></i>
-                    </div>
-                    <div class="overflow-hidden">
-                        <p class="text-sm font-medium truncate">관리자</p>
-                        <p class="text-xs text-slate-500 truncate">admin@clean.sol</p>
-                    </div>
-                </div>
-            </div>
-        </aside>
-
-        <!-- 메인 컨텐츠 -->
-        <main class="flex-1 flex flex-col relative overflow-hidden bg-gray-50">
-            <header class="bg-white border-b border-gray-200 px-8 py-4 flex justify-between items-center shadow-sm">
-                <h2 id="page-title" class="text-2xl font-bold text-gray-800">재고 관리</h2>
-                <div class="flex items-center gap-4">
-                    <button class="w-10 h-10 rounded-full hover:bg-gray-100 flex items-center justify-center text-gray-500 transition-colors">
-                        <i class="fa-regular fa-bell"></i>
-                    </button>
-                </div>
-            </header>
-
-            <div class="flex-1 overflow-auto p-8 relative">
-                <section id="page-inventory" class="space-y-6">
-                    <div class="flex justify-between items-center">
-                        <div class="flex gap-2">
-                            <button class="px-4 py-2 bg-white border border-gray-300 text-gray-600 rounded-lg text-sm font-medium hover:bg-gray-50 transition-colors">
-                                <i class="fa-solid fa-filter mr-1"></i> 필터
-                            </button>
-                            <button class="px-4 py-2 bg-white border border-gray-300 text-gray-600 rounded-lg text-sm font-medium hover:bg-gray-50 transition-colors">
-                                <i class="fa-solid fa-download mr-1"></i> 엑셀 다운로드
-                            </button>
-                        </div>
-                        <button onclick="openModal()" class="px-5 py-2.5 bg-blue-600 text-white rounded-lg text-sm font-bold hover:bg-blue-700 shadow-md hover:shadow-lg transition-all flex items-center gap-2">
-                            <i class="fa-solid fa-plus"></i> 신규 등록
-                        </button>
-                    </div>
-
-                    <div class="bg-white rounded-xl shadow-sm border border-gray-200 overflow-hidden">
-                        <table class="w-full text-sm text-left">
-                            <thead class="bg-gray-50 text-gray-600 font-bold border-b border-gray-200">
-                                <tr>
-                                    <th class="px-6 py-4">품목명</th>
-                                    <th class="px-6 py-4">분류</th>
-                                    <th class="px-6 py-4 text-center">수량 관리</th>
-                                    <th class="px-6 py-4 text-center">작업</th>
-                                </tr>
-                            </thead>
-                            <tbody id="inventory-table-body" class="divide-y divide-gray-100">
-                                <!-- 데이터 로드 -->
-                            </tbody>
-                        </table>
-                    </div>
-                </section>
-            </div>
-        </main>
+        <button onclick="Inventory.openModal()" class="px-5 py-2.5 bg-blue-600 text-white rounded-lg text-sm font-bold hover:bg-blue-700 shadow-md flex items-center gap-2">
+            <i class="fa-solid fa-plus"></i> 신규 등록
+        </button>
     </div>
 
-    <!-- 추가 모달 -->
-    <div id="modal-add" class="fixed inset-0 bg-black bg-opacity-50 z-50 hidden flex items-center justify-center p-4 backdrop-blur-sm transition-all">
-        <div class="bg-white rounded-xl shadow-2xl w-full max-w-md overflow-hidden transform transition-all scale-100">
-            <div class="bg-slate-50 px-6 py-4 border-b border-slate-100 flex justify-between items-center">
-                <h3 class="font-bold text-lg text-slate-800">신규 품목 등록</h3>
-                <button onclick="closeModal()" class="text-slate-400 hover:text-slate-600 transition-colors">
-                    <i class="fa-solid fa-xmark text-xl"></i>
-                </button>
-            </div>
-            <form id="form-add-item" onsubmit="handleAddItem(event)" class="p-6 space-y-5">
-                <div>
-                    <label class="block text-sm font-bold text-slate-700 mb-1">품목명</label>
-                    <input type="text" name="name" required class="w-full px-4 py-2 border border-slate-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500 outline-none transition-all" placeholder="예: A4 용지">
-                </div>
+    <!-- 데이터 테이블 -->
+    <div class="bg-white rounded-xl shadow-sm border border-gray-200 overflow-hidden">
+        <table class="w-full text-sm text-left">
+            <thead class="bg-gray-50 text-gray-600 font-bold border-b border-gray-200">
+                <tr>
+                    <th class="px-6 py-4">분류</th>
+                    <th class="px-6 py-4">품목명 / 모델명</th>
+                    <th class="px-6 py-4">상세 정보 (Serial/상태)</th>
+                    <th class="px-6 py-4 text-center">재고 수량</th>
+                    <th class="px-6 py-4 text-center">관리</th>
+                </tr>
+            </thead>
+            <tbody id="inventory-list" class="divide-y divide-gray-100">
+                <!-- JS로 데이터 로드 -->
+            </tbody>
+        </table>
+    </div>
+</div>
+
+<!-- 등록/수정 모달 -->
+<div id="inventory-modal" class="fixed inset-0 bg-black bg-opacity-50 z-50 hidden flex items-center justify-center p-4 backdrop-blur-sm">
+    <div class="bg-white rounded-xl shadow-2xl w-full max-w-lg overflow-hidden">
+        <div class="bg-slate-50 px-6 py-4 border-b border-slate-100 flex justify-between items-center">
+            <h3 class="font-bold text-lg text-slate-800">품목 정보</h3>
+            <button onclick="Inventory.closeModal()" class="text-slate-400 hover:text-slate-600"><i class="fa-solid fa-xmark text-xl"></i></button>
+        </div>
+        <form id="inventory-form" onsubmit="Inventory.saveItem(event)" class="p-6 space-y-4">
+            <input type="hidden" name="id">
+            <div class="grid grid-cols-2 gap-4">
                 <div>
                     <label class="block text-sm font-bold text-slate-700 mb-1">분류</label>
-                    <select name="category" class="w-full px-4 py-2 border border-slate-300 rounded-lg focus:ring-2 focus:ring-blue-500 outline-none bg-white">
+                    <select name="category" class="w-full px-3 py-2 border rounded-lg outline-none focus:ring-2 focus:ring-blue-500">
                         <option value="소모품">소모품</option>
                         <option value="복합기">복합기</option>
                         <option value="부품">부품</option>
                         <option value="기타">기타</option>
                     </select>
                 </div>
-                <div>
-                    <label class="block text-sm font-bold text-slate-700 mb-1">초기 수량</label>
-                    <input type="number" name="stock" value="0" min="0" required class="w-full px-4 py-2 border border-slate-300 rounded-lg focus:ring-2 focus:ring-blue-500 outline-none" placeholder="0">
-                </div>
-                <div class="pt-2">
-                    <button type="submit" class="w-full bg-blue-600 text-white py-3 rounded-lg font-bold hover:bg-blue-700 transition-colors shadow-lg shadow-blue-200">등록하기</button>
-                </div>
-            </form>
-        </div>
+            </div>
+            <div>
+                <label class="block text-sm font-bold text-slate-700 mb-1">품목명 / 모델명</label>
+                <input type="text" name="name" required class="w-full px-3 py-2 border rounded-lg outline-none focus:ring-2 focus:ring-blue-500">
+            </div>
+            <div>
+                <label class="block text-sm font-bold text-slate-700 mb-1">재고 수량</label>
+                <input type="number" name="stock" value="0" required class="w-full px-3 py-2 border rounded-lg outline-none focus:ring-2 focus:ring-blue-500">
+            </div>
+            <button type="submit" class="w-full bg-blue-600 text-white py-3 rounded-lg font-bold hover:bg-blue-700 mt-4">저장하기</button>
+        </form>
     </div>
-
-    <script src="main.js"></script>
-</body>
-</html>
+</div>
