--- a/modules/tools/tools.html
+++ b/modules/tools/tools.html
@@ -1,11 +1,6 @@
 <div class="space-y-6">
-    <!-- 탭 메뉴 -->
-    <div class="flex space-x-1 bg-gray-200 p-1 rounded-lg w-fit no-print">
-        <button class="px-4 py-2 rounded-md text-sm font-medium bg-white text-gray-800 shadow-sm">견적서 작성</button>
-    </div>
-
     <!-- 견적서 A4 용지 UI -->
-    <div class="flex justify-center bg-gray-200 p-8 overflow-auto">
+    <div class="flex justify-center bg-gray-200 p-8 overflow-auto" id="view-quote">
         <div class="print-area bg-white w-[210mm] min-h-[297mm] p-[20mm] shadow-2xl text-sm relative">
             <!-- 인쇄 버튼 -->
             <button onclick="window.print()" class="absolute top-4 right-4 bg-slate-800 text-white px-4 py-2 rounded shadow no-print hover:bg-slate-700">
