--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <!-- Supabase SDK -->
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <!-- html2pdf.js -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -57,6 +59,10 @@
                 <button data-module="tools" class="nav-btn w-full flex items-center gap-3 px-4 py-3 rounded-lg transition-all text-gray-400 hover:bg-slate-800 hover:text-white text-left">
                     <i class="fa-solid fa-calculator w-5 text-center"></i>
                     <span class="font-medium">업무 도구</span>
+                </button>
+                <button data-module="calculate" class="nav-btn w-full flex items-center gap-3 px-4 py-3 rounded-lg transition-all text-gray-400 hover:bg-slate-800 hover:text-white text-left">
+                    <i class="fa-solid fa-file-invoice-dollar w-5 text-center"></i>
+                    <span class="font-medium">원가 계산기</span>
                 </button>
             </nav>
 
