--- a/modules/tools/calculate/calculate.html
+++ b/modules/tools/calculate/calculate.html
@@ -1,4 +1,26 @@
 <div id="calculator-view">
+    <style>
+        /* 테이블 테두리 스타일 추가: 얇고(1px) 진한(#333) 색상 */
+        #calculator-view table {
+            border-collapse: collapse !important;
+        }
+        #calculator-view th, #calculator-view td {
+            border: 1px solid #333 !important;
+        }
+        /* 입력창 스타일: 테두리 제거 및 배경색 적용 */
+        #calculator-view input {
+            border: none !important;
+            background-color: #f8fafc; /* 아주 연한 회색 배경 */
+            border-radius: 4px;
+            padding: 5px;
+            width: 100%;
+            box-sizing: border-box;
+        }
+        #calculator-view input:focus {
+            background-color: #e2e8f0; /* 포커스 시 배경색 강조 */
+            outline: none;
+        }
+    </style>
     <div class="calc-container" id="calculator-content">
         <h1>복합기 렌탈 원가 계산서</h1>
 
