--- a/modules/tools/calculate/calculate.html
+++ b/modules/tools/calculate/calculate.html
@@ -10,14 +10,14 @@
         /* 입력창 스타일: 테두리 제거 및 배경색 적용 */
         #calculator-view input {
             border: none !important;
-            background-color: #f8fafc; /* 아주 연한 회색 배경 */
+            background-color: #d7ebff; /* 아주 연한 회색 배경 */
             border-radius: 4px;
             padding: 5px;
             width: 100%;
             box-sizing: border-box;
         }
         #calculator-view input:focus {
-            background-color: #e2e8f0; /* 포커스 시 배경색 강조 */
+            background-color: #d7ebff; /* 포커스 시 배경색 강조 */
             outline: none;
         }
     </style>
