--- a/modules/tools/calculate/calculate.html
+++ b/modules/tools/calculate/calculate.html
@@ -1,23 +1,27 @@
 <div id="calculator-view">
     <style>
-        /* 테이블 테두리 스타일 추가: 얇고(1px) 진한(#333) 색상 */
+        /* 전체 컨테이너 배경 흰색 */
+        .calc-container {
+            background-color: #ffffff !important;
+        }
+        /* 테이블 테두리 스타일: 얇은 검정선 (1px) */
         #calculator-view table {
             border-collapse: collapse !important;
         }
         #calculator-view th, #calculator-view td {
-            border: 1.5px solid #000000 !important;
+            border: 1px solid #000000 !important;
         }
-        /* 입력창 스타일: 테두리 제거 및 배경색 적용 */
+        /* 입력창 스타일: 테두리 제거 및 노란색 배경 적용 */
         #calculator-view input {
             border: none !important;
-            background-color: #d7ebff; /* 아주 연한 회색 배경 */
+            background-color: #ffffcc !important; /* 노란색 배경 */
             border-radius: 4px;
             padding: 5px;
             width: 100%;
             box-sizing: border-box;
         }
         #calculator-view input:focus {
-            background-color: #d7ebff; /* 포커스 시 배경색 강조 */
+            background-color: #fff9c4 !important; /* 포커스 시 진한 노란색 */
             outline: none;
         }
     </style>
@@ -71,14 +75,14 @@
                 <tr>
                     <td>금액 설정</td>
                     <td><input type="text" inputmode="numeric" id="rentalFee" value="100,000" oninput="Calculator.handleInput(this)"></td>
-                    <td>흑백: <input type="text" inputmode="numeric" id="monthlyBW" value="1,000" style="width: 50px;" oninput="Calculator.handleInput(this)"></td>
+                    <td>흑백: <input type="text" inputmode="numeric" id="monthlyBW" value="1,000" style="width: calc(100% - 50px); display: inline-block;" oninput="Calculator.handleInput(this)"></td>
                     <td><input type="text" id="totalBW" class="readonly" readonly></td>
                 </tr>
                 <tr>
                     <th rowspan="2" class="section-header">기본제공</th>
                     <td>흑백매수</td>
                     <td><input type="text" inputmode="numeric" id="basicBW" value="1,000" oninput="Calculator.handleInput(this)"></td>
-                    <td>칼라: <input type="text" inputmode="numeric" id="monthlyColor" value="100" style="width: 50px;" oninput="Calculator.handleInput(this)"></td>
+                    <td>칼라: <input type="text" inputmode="numeric" id="monthlyColor" value="100" style="width: calc(100% - 50px); display: inline-block;" oninput="Calculator.handleInput(this)"></td>
                     <td><input type="text" id="totalColor" class="readonly" readonly></td>
                 </tr>
                 <tr>
