--- a/modules/tools/calculate/calculate.html
+++ b/modules/tools/calculate/calculate.html
@@ -14,7 +14,7 @@
         /* 입력창 스타일: 테두리 제거 및 노란색 배경 적용 */
         #calculator-view input {
             border: none !important;
-            background-color: #ffffcc !important; /* 노란색 배경 */
+            background-color: #f5f5be !important; /* 노란색 배경 */
             border-radius: 4px;
             padding: 5px;
             width: 100%;
