--- a/modules/tools/calculate/calculate.html
+++ b/modules/tools/calculate/calculate.html
@@ -24,6 +24,11 @@
             background-color: #fff9c4 !important; /* 포커스 시 진한 노란색 */
             outline: none;
         }
+        /* 읽기 전용 입력창 스타일: 회색 배경 */
+        #calculator-view input:read-only {
+            background-color: #e5e7eb !important; /* 회색 배경 */
+            cursor: default;
+        }
     </style>
     <div class="calc-container" id="calculator-content">
         <h1>복합기 렌탈 원가 계산서</h1>
