--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <div class="flex h-screen overflow-hidden">
         <!-- 사이드바 -->
-        <aside class="w-64 bg-slate-900 text-white flex flex-col shadow-xl z-20">
+        <aside id="sidebar" class="w-64 bg-slate-900 text-white flex flex-col shadow-xl z-20 transition-all duration-300 ease-in-out">
             <div class="p-6 border-b border-slate-800 flex items-center gap-3">
                 <div class="w-10 h-10 rounded-lg bg-blue-600 flex items-center justify-center text-xl font-bold">C</div>
                 <div>
@@ -79,7 +79,12 @@
         <main class="flex-1 flex flex-col relative overflow-hidden">
             <!-- 헤더 -->
             <header class="bg-white border-b border-gray-200 px-8 py-4 flex justify-between items-center shadow-sm h-16">
-                <h2 id="page-title" class="text-2xl font-bold text-gray-800">대시보드</h2>
+                <div class="flex items-center gap-4">
+                    <button onclick="toggleSidebar()" class="text-gray-500 hover:text-gray-800 focus:outline-none transition-colors">
+                        <i class="fa-solid fa-bars text-xl"></i>
+                    </button>
+                    <h2 id="page-title" class="text-2xl font-bold text-gray-800">대시보드</h2>
+                </div>
                 <div class="flex items-center gap-4">
                     <span class="text-sm text-gray-500" id="current-date"></span>
                     <button class="w-10 h-10 rounded-full hover:bg-gray-100 flex items-center justify-center text-gray-500 transition-colors">
@@ -98,5 +103,11 @@
     <!-- Core Scripts -->
     <script src="js/supabase.js"></script>
     <script src="js/app.js"></script>
+    <script>
+        function toggleSidebar() {
+            const sidebar = document.getElementById('sidebar');
+            sidebar.classList.toggle('-ml-64');
+        }
+    </script>
 </body>
 </html>
